--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <body>
         <!-- import title screen -->
-        <script src="TitleScreen.js"></script>
+        <script src="Scenes/TitleScreen.js"></script>
+        <!-- import title screen -->
+        <script src="Scenes/Scene1.js"></script>
         <!-- import the game engine -->
         <script src="GameEngine.js"></script>
     </body>
